complete description of exercise 1

--- a/presentation/spark_hands_on.tex
+++ b/presentation/spark_hands_on.tex
@@ -271,6 +271,9 @@ sbt "run-main psug.hands.on.prerequisite.WordCount README.md"
       \item Third list contains primes under 100. 
     \end{itemize}
     We want to obtain the sum of square of integers that are under 100 and are not prime.
+    \\ \medskip
+    For instance, the sum of square of intergers that are under 10 and are not prime is
+    $1^{2} + 4^{2} + 6^{2} + 8^{2} + 9^{2} + 10^{2} = 298$
   \end{block}
 
   \begin{block}{What you will learn}
