[presentation] Add slide about Lateral-Thoughts formations

--- a/presentation/spark_hands_on.tex
+++ b/presentation/spark_hands_on.tex
@@ -1893,6 +1893,22 @@ ls src/main/scala/psug/hands/on/solutions
 
 \end{frame}
 
+\begin{frame}
+  \frametitle{If you want to go further}
+
+  \begin{block}{Lateral-Thoughts gives the official Databricks Spark Training}
+    \begin{itemize}
+      \item \textbf{\href{http://www.lateral-thoughts.com/formations/formation-spark}{Introduction to Apache Spark}} \textit{One-Day Training} : \newline Spark Shell, Spark Core, SQL, MLLib, Deployment... In python, scala, java.
+      \item \textbf{Spark Advanced Training} \textit{Three-Days Training} : \newline Coming soon.
+    \end{itemize}
+  \end{block}
+
+  \begin{block}{Next Trainings}
+    \LARGE\href{http://www.lateral-thoughts.com/formations/calendrier}{http://www.lateral-thoughts.com/formations/calendrier}\normalsize
+  \end{block}
+
+\end{frame}
+
 %--- End ---
 \begin{frame}
 
