[presentation] add commands to clone repository as waiting slide

--- a/presentation/spark_hands_on.tex
+++ b/presentation/spark_hands_on.tex
@@ -127,7 +127,18 @@
 \institute[LT]{Lateral-Thoughts}
 \date{May 13, 2015}
 
+\begin{frame}[fragile]
+
+    \begin{lstlisting}[language=bash, basicstyle=\small\ttfamily]
+git clone https://github.com/vincentdoba/spark-hands-on.git
+cd spark-hands-on
+sbt clean package 
+    \end{lstlisting}
+
+\end{frame}
+
 \frame{\titlepage}
+
 
 %--- Summary ---
 \begin{frame}[allowframebreaks]
